--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
@@ -75,9 +77,10 @@
 
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
-    <div class="hero-container" data-aos="fade-in">
+    <div class="hero-container" data-aos="fade-in" style="margin-left: 20px;">
       <h1>Ewen Gallet</h1>
-      <p>I will develop your Web App using <span class="typed" data-typed-items="Spring boot, Angular, Postgres"></span>
+      <p>Web application developer, using <span class="typed"
+          data-typed-items="Java,Spring boot,Angular, JavaScript, Postgres, MySql,OracleDB, MongoDB "></span>
       </p>
     </div>
   </section><!-- End Hero -->
@@ -198,34 +201,46 @@
             in HTML, CSS, and JavaScript to create visually appealing frontend components.
           </p>
         </div>
-        <table class="skills-table">
-          <tr>
-            <th>Backend</th>
-            <th>&nbsp;&nbsp;&nbsp;Frontend</th>
-          </tr>
-          <tr>
-            <td>
-              <ul>
-                <li>Java</li>
-                <ul>
-                  <li>Spring (MVC, Security, Batch)</li>
-                  <li>PlayFramework</li>
-                </ul>
-                <li>Python</li>
-                <li>Delphi</li>
-              </ul>
-            </td>
-            <td>
-              <ul>
-                <li>Thymeleaf</li>
-                <li>Angular</li>
 
-                <li>JavaScript</li>
-                <li>HTML</li>
-                <li>JavaScript</li>
-              </ul>
-            </td>
-          </tr>
+        <table class="table skills-table">
+          <thead class="thead-dark">
+            <tr>
+              <th scope="col">Backend</th>
+              <th scope="col">Frontend</th>
+              <th scope="col">Database</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>
+                <ul class="list-unstyled">
+                  <li>Java</li>
+                  <li>Spring MVC</li>
+                  <li>Spring Security</li>
+                  <li>Spring Batch</li>
+                  <li>PlayFramework</li>
+                  <li>Python</li>
+                  <li>Delphi</li>
+                </ul>
+              </td>
+              <td>
+                <ul class="list-unstyled">
+                  <li>Thymeleaf</li>
+                  <li>Angular</li>
+                  <li>JavaScript</li>
+                  <li>HTML</li>
+                </ul>
+              </td>
+              <td>
+                <ul class="list-unstyled">
+                  <li>Postgres</li>
+                  <li>Oracle</li>
+                  <li>MySQL</li>
+                  <li>MangoDB</li>
+                </ul>
+              </td>
+            </tr>
+          </tbody>
         </table>
         <p>Proficient in frontend security mechanisms using Angular guards and JWT, along with seamless integration of
           Spring Security for robust backend security.</p>
@@ -264,10 +279,14 @@
               <h5>2018 November - 2023 March</h5>
               <p><em>A.C.I.S, Namur, Belgium </em></p>
               <ul>
-                <li>Responsible for maintaining and improving multiple projects, ensuring their smooth operation and addressing any issues that arise.</li>
-                <li>Analyzed, developed, and tested new projects, ensuring they met the required specifications and quality standards.</li>
-                <li>Provided training sessions to users, equipping them with the necessary skills to effectively utilize the projects.</li>
-                <li>Implemented the Scrum methodology, facilitating effective collaboration within cross-functional teams and actively involving users in the development process.</li>
+                <li>Responsible for maintaining and improving multiple projects, ensuring their smooth operation and
+                  addressing any issues that arise.</li>
+                <li>Analyzed, developed, and tested new projects, ensuring they met the required specifications and
+                  quality standards.</li>
+                <li>Provided training sessions to users, equipping them with the necessary skills to effectively utilize
+                  the projects.</li>
+                <li>Implemented the Scrum methodology, facilitating effective collaboration within cross-functional
+                  teams and actively involving users in the development process.</li>
               </ul>
             </div>
           </div>
@@ -277,13 +296,15 @@
               <h4>Master's degree in Computer Science</h4>
               <h5>2016 - 2018</h5>
               <p><em>UMONS University, Mons, Belgium</em></p>
-              <p>During my studies, I gained in-depth knowledge and skills in computer science, focusing on areas such as software development, algorithms, and data analysis.</p>
+              <p>During my studies, I gained in-depth knowledge and skills in computer science, focusing on areas such
+                as software development, algorithms, and data analysis.</p>
             </div>
             <div class="resume-item">
               <h4>Bachelor's degree in Computer Science</h4>
               <h5>2012 - 2016</h5>
               <p><em>UMONS University, Mons, Belgium</em></p>
-              <p>My undergraduate studies provided me with a solid foundation in computer science principles, programming languages, and database management.</p>
+              <p>My undergraduate studies provided me with a solid foundation in computer science principles,
+                programming languages, and database management.</p>
             </div>
           </div>
         </div>
@@ -291,13 +312,16 @@
       </div>
     </section><!-- End Resume Section -->
 
+    <div id="contenu"></div>
     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio section-bg">
       <div class="container">
 
         <div class="section-title">
           <h2>Projects</h2>
-          <p>During my career, I have had the opportunity to work on a wide range of projects, including several in the professional domain. Due to the volume and confidentiality of some projects, I am showcasing a selected portion that highlights my expertise and skills.</p>
+          <p>During my career, I have had the opportunity to work on a wide range of projects, including several in the
+            professional domain. Due to the volume and confidentiality of some projects, I am showcasing a selected
+            portion that highlights my expertise and skills.</p>
         </div>
 
         <div class="row" data-aos="fade-up">
@@ -313,7 +337,7 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -322,11 +346,18 @@
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
+          </div> -->
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a onclick="afficherPopup('project-details.html')" title="App 1" style="cursor: pointer;"><i
+                    class="bx">Details</i></a>
+              </div>
+            </div>
           </div>
 
-
-
-          
           <!--  -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
@@ -677,3 +708,5 @@
 </body>
 
 </html>
+
+<div id="popupContainer"></div>
