--- a/project-details.html
+++ b/project-details.html
@@ -1,1 +1,137 @@
-<p>it works ! </p>
+<head>
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
+    <title>iPortfolio Bootstrap Template - Index</title>
+    <meta content="" name="description">
+    <meta content="" name="keywords">
+
+    <!-- Favicons -->
+    <link href="assets/img/favicon.png" rel="icon">
+    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+
+    <!-- Google Fonts -->
+    <link
+        href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+        rel="stylesheet">
+
+    <!-- Vendor CSS Files -->
+    <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+    <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+
+    <!-- Template Main CSS File -->
+    <link href="assets/css/style.css" rel="stylesheet">
+
+    <!-- =======================================================
+    * Template Name: iPortfolio
+    * Updated: May 30 2023 with Bootstrap v5.3.0
+    * Template URL: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/
+    * Author: BootstrapMade.com
+    * License: https://bootstrapmade.com/license/
+    ======================================================== -->
+</head>
+
+<body>
+    <section id="portfolio-details" class="portfolio-details">
+        <div class="container">
+          <!-- <div class="row gy-4">
+            <div class="col-lg-8">
+              <div class="portfolio-details-slider swiper">
+                <div class="swiper-wrapper align-items-center">
+                  <div class="swiper-slide">
+                    <img src="assets/img/portfolio/portfolio-details-1.jpg" alt="">
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="assets/img/portfolio/portfolio-details-2.jpg" alt="">
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="assets/img/portfolio/portfolio-details-3.jpg" alt="">
+                  </div>
+                </div>
+                <div class="swiper-pagination"></div>
+              </div>
+            </div> -->
+            <div class="">
+              <div class="portfolio-info">
+                <h3>Project information</h3>
+                <ul>
+                  <li><strong>Category</strong>: Web design</li>
+                  <li><strong>Client</strong>: A.C.I.S</li>
+                  <li><strong>Project date</strong>: 01 March, 2020</li>
+                  <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+                </ul>
+              </div>
+              <div class="container">
+                <div class="portfolio-description">
+                  <h2>To comply with the new rules imposed by the Brussels region, establishments located in Brussels must invoice quarterly (and no longer monthly). This implies major changes for the reimbursement of mutual insurance to residents.</h2>
+                  <p>
+                    To do this, it was necessary to have contact with CIN as an intermediary of eHealth. The eHealth platform provides 2 services that can be consulted via an endpoint:
+                  </p>
+                  <ul>
+                    <li>MemberData: Allows you to receive information on the insurability of residents. This service requires that the data exchange can operate synchronously and asynchronously.</li>
+                    <li>Invoicing: Allows the transfer and reception of files concerning residents' invoices. This service only works asynchronously.</li>
+                  </ul>
+                  <p>
+                    Given the sensitivity of the information, the data sent and received must be encrypted using an ETK mechanism, and a STS connection is used to ensure security. The information received is stored and transmitted to an internal software in charge of resident invoices.
+                  </p>
+                  <h2>Tasks:</h2>
+                  <ul>
+                    <li>Gather user requirements</li>
+                    <li>Translate business analysis into Functional Analysis (use-case, class diagrams)</li>
+                    <li>Technical Analysis (choice of technologies)</li>
+                    <li>Management of dependencies</li>
+                    <li>Features development in Java</li>
+                    <li>Contact and manage end points</li>
+                    <li>Parameters of different clients with encryption methods</li>
+                    <li>API development (SOAP)</li>
+                    <li>Database manipulations</li>
+                    <li>Validation with technical stakeholders/providers</li>
+                    <li>Testing: unit testing, functional testing</li>
+                    <li>Deployment with Docker</li>
+                  </ul>
+                  <h2>Technologies:</h2>
+                  <ul>
+                    <li>Java 11</li>
+                    <li>Play framework</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>Javascript</li>
+                    <li>Postgres</li>
+                    <li>DB2</li>
+                    <li>SOAP API</li>
+                    <li>SFTP</li>
+                    <li>ebean (ORM)</li>
+                    <li>GIT</li>
+                    <li>IntelliJ</li>
+                    <li>Maven</li>
+                    <li>Junit</li>
+                    <li>Docker</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section><!-- End Portfolio Details -->
+      
+    <!-- End Portfolio Details Section -->
+
+    
+  <!-- Vendor JS Files -->
+  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="assets/vendor/aos/aos.js"></script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="assets/vendor/typed.js/typed.umd.js"></script>
+  <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
+
+  <!-- Template Main JS File -->
+  <script src="assets/js/main.js"></script>
+</body>
