--- a/project-details.html
+++ b/project-details.html
@@ -100,7 +100,7 @@
                     <li>HTML</li>
                     <li>CSS</li>
                     <li>Javascript</li>
-                    <li>Postgres</li>
+                    <li>PostgreSQL</li>
                     <li>DB2</li>
                     <li>SOAP API</li>
                     <li>SFTP</li>
