--- a/portfolio-details2.html
+++ b/portfolio-details2.html
@@ -59,7 +59,7 @@
           <li><a href="index.html#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="index.html#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="index.html#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li><a href="index.html#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Projects</span></a></li>
+          <li><a href="index.html#projects" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Projects</span></a></li>
           <li><a href="index.html#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
           <li><a href="index.html#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
@@ -76,7 +76,7 @@
         <div class="d-flex justify-content-between align-items-center">
           <h2>Interface Doccle</h2>
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html#projects">Home</a></li>
             <li>Portfolio Details</li>
           </ol>
         </div>
@@ -87,6 +87,17 @@
     <!-- ======= Portfolio Details Section ======= -->
     <section id="portfolio-details" class="portfolio-details">
       <div class="container">
+
+        <a href="portfolio-details1.html">
+          <button title="Previous project" class="btn btn-icon btn-primary btn-transparent btn-hover btnCustomLeft">
+            <i class="bi bi-arrow-left"></i>
+          </button>
+        </a>
+        <a href="portfolio-details3.html">
+          <button title="Next project"  class="btn btn-icon btn-primary btn-transparent btn-hover btnCustomRight">
+            <i class="bi bi-arrow-right"></i>
+          </button>
+        </a>
 
         <div class="row gy-4">
 
@@ -172,9 +183,7 @@
     </div>
   </footer><!-- End  Footer -->
 
-  <!-- <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a> -->
-
-  <a href="index.html#portfolio" class="back-to-left d-flex align-items-center justify-content-center active" ><i class="bi bi-arrow-left-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
