--- a/portfolio-details4.html
+++ b/portfolio-details4.html
@@ -65,7 +65,7 @@
           </li>
           <li><a href="index.html#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i>
               <span>Resume</span></a></li>
-          <li><a href="index.html#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i>
+          <li><a href="index.html#projects" class="nav-link scrollto"><i class="bx bx-book-content"></i>
               <span>Projects</span></a></li>
           <li><a href="index.html#services" class="nav-link scrollto"><i class="bx bx-server"></i>
               <span>Services</span></a></li>
@@ -85,7 +85,7 @@
         <div class="d-flex justify-content-between align-items-center">
           <h2>DB Migration</h2>
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html#projects">Home</a></li>
             <li>Portfolio Details</li>
           </ol>
         </div>
@@ -97,10 +97,21 @@
     <section id="portfolio-details" class="portfolio-details">
       <div class="container">
 
+        <a href="portfolio-details3.html">
+          <button title="Previous project" class="btn btn-icon btn-primary btn-transparent btn-hover btnCustomLeft">
+            <i class="bi bi-arrow-left"></i>
+          </button>
+        </a>
+        <a href="portfolio-details5.html">
+          <button title="Next project"  class="btn btn-icon btn-primary btn-transparent btn-hover btnCustomRight">
+            <i class="bi bi-arrow-right"></i>
+          </button>
+        </a>
+
         <div class="row gy-4">
 
           <div class="col-lg-8">
-            <div class="">
+            <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
                 <div class="swiper-slide">
                   <img src="assets/img/portfolio/portfolio-details4-1.jpg" alt="">
@@ -111,6 +122,22 @@
             </div>
           </div>
 
+          <!-- <div class="col-lg-8">
+            <div class="portfolio-details-slider swiper">
+              <div class="swiper-wrapper align-items-center">
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/portfolio-details3-1.jpg" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/portfolio-details3-2.jpg" alt="">
+                </div>
+
+              </div>
+              <div class="swiper-pagination"></div>
+            </div>
+          </div> -->
+
+          
           <div class="col-lg-4">
             <div class="portfolio-info">
               <h3>Project information</h3>
@@ -171,9 +198,9 @@
     </div>
   </footer><!-- End  Footer -->
 
-  <!-- <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a> -->
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
-  <a href="index.html#portfolio" class="back-to-left d-flex align-items-center justify-content-center active"><i
+  <!-- <a href="index.html#projects" class="back-to-left d-flex align-items-center justify-content-center active"><i -->
       class="bi bi-arrow-left-short"></i></a>
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
