--- a/portfolio-details5.html
+++ b/portfolio-details5.html
@@ -65,7 +65,7 @@
           </li>
           <li><a href="index.html#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i>
               <span>Resume</span></a></li>
-          <li><a href="index.html#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i>
+          <li><a href="index.html#projects" class="nav-link scrollto"><i class="bx bx-book-content"></i>
               <span>Projects</span></a></li>
           <li><a href="index.html#services" class="nav-link scrollto"><i class="bx bx-server"></i>
               <span>Services</span></a></li>
@@ -85,7 +85,7 @@
         <div class="d-flex justify-content-between align-items-center">
           <h2>Nursing software</h2>
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html#projects">Home</a></li>
             <li>Portfolio Details</li>
           </ol>
         </div>
@@ -96,6 +96,17 @@
     <!-- ======= Portfolio Details Section ======= -->
     <section id="portfolio-details" class="portfolio-details">
       <div class="container">
+
+        <a href="portfolio-details4.html">
+          <button title="Previous project" class="btn btn-icon btn-primary btn-transparent btn-hover btnCustomLeft">
+            <i class="bi bi-arrow-left"></i>
+          </button>
+        </a>
+        <a href="portfolio-details6.html">
+          <button title="Next project"  class="btn btn-icon btn-primary btn-transparent btn-hover btnCustomRight">
+            <i class="bi bi-arrow-right"></i>
+          </button>
+        </a>
 
         <div class="row gy-4">
 
@@ -181,9 +192,9 @@
     </div>
   </footer><!-- End  Footer -->
 
-  <!-- <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a> -->
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
-  <a href="index.html#portfolio" class="back-to-left d-flex align-items-center justify-content-center active"><i
+  <!-- <a href="index.html#projects" class="back-to-left d-flex align-items-center justify-content-center active"><i -->
       class="bi bi-arrow-left-short"></i></a>
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
