--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>iPortfolio Bootstrap Template - Index</title>
+  <title>Ewen Gallet</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/devicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -75,7 +75,7 @@
     <div class="hero-container" data-aos="fade-in" style="margin-left: 20px;">
       <h1>Ewen Gallet</h1>
       <p>Building <b>Web Applications</b> with <span class="typed"
-          data-typed-items="Java,Spring boot,Angular, JavaScript, Thymeleaf, PostgreSQL, MySql ,OracleDB, MongoDB "></span>
+          data-typed-items="Java,Spring boot,Angular, JavaScript, Thymeleaf, Microservices, REST, SOAP,Hibernate, PostgreSQL, MySql ,OracleDB, MongoDB "></span>
       </p>
     </div>
   </section><!-- End Hero -->
@@ -89,18 +89,23 @@
         <div class="section-title">
           <h2>About</h2>
 
-          <p>I am an experienced <b>Web developer</b> specializing in the creation of robust and scalable applications.
-            With a <b>Master's degree</b> in Computer Science and <b><span id="differenceAnnees"></span> years of
-              experience</b>, I have gained a strong expertise in utilizing technologies such as <b>Spring Framework,
-              Thymeleaf, Angular, PostgreSQL, and MySQL</b>.</p>
-          <p>I am passionate about problem-solving and committed to delivering high-quality <b>software solutions</b>
-            that meet the specific needs of my clients. Contact me today to discuss your project, and let's work
-            together to bring your vision to life.</p>
+
+
+            <p>
+              <b>Expert developer</b> with <b><span id="differenceAnnees"></span> years of
+                experience</b>, specializing in <b>Java Spring</b>, <b>microservices</b>
+                development, <b>web services</b>, system enhancement, and software <b>integration</b>. I have handson experience with a wide range of technologies, including <b>Java, Spring, MySQL,
+                PostgreSQL, Thymeleaf, Angular, Docker</b> and have successfully led multiple projects.
+                I ensure application security with advanced measures, including <b>Spring Security</b> and <b>JWT</b>..</p>
+                <p>My work approach aligns with agile methodologies such as <b>Scrum</b>, ensuring optimal project
+                management efficiency.</p>
+
+            </p>
         </div>
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+            <img src="assets/img/profile-img2.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Full stack Web Developer</h3>
@@ -322,7 +327,7 @@
           <p>I have had the opportunity to work on a wide range of projects, including several in the
             professional domain. Due to the volume and confidentiality of some projects, I am showcasing a selected
             portion that highlights my expertise and skills.</p>
-            <p>Personnal projects are available on <a href="https://github.com/Mirooz?tab=repositories">my Github</a></p>
+            <p>My personnal projects are available on <a href="https://github.com/Mirooz?tab=repositories">my Github</a></p>
         </div>
 
         <div class="row" data-aos="fade-up">
@@ -589,7 +594,7 @@
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+32 468 09 32 04</p>
+                <p>+32 468 09 21 04</p>
               </div>
 
               <!-- <iframe
